<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:columnCount="3"
    android:rowCount="8"
    tools:context=".StandartGameActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="3"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/big_padding"
        android:layout_row="0"
        android:orientation="horizontal">

        <TextView
            android:textSize="@dimen/big_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="0"
            android:text="@string/next_move" />

        <TextView
            android:id="@+id/next_move_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="0"
            android:text="XXXX" />

    </LinearLayout>


    <Button
        android:id="@+id/button1"
        android:layout_width="@dimen/game_button_size"
        android:layout_height="@dimen/game_button_size"
        android:layout_column="0"
        android:layout_row="1" />

    <Button
        android:id="@+id/button2"
        android:layout_width="@dimen/game_button_size"
        android:layout_height="@dimen/game_button_size"
        android:layout_column="1"
        android:layout_row="1" />

    <Button
        android:id="@+id/button3"
        android:layout_width="@dimen/game_button_size"
        android:layout_height="@dimen/game_button_size"
        android:layout_column="2"
        android:layout_row="1" />

    <Button
        android:id="@+id/button4"
        android:layout_width="@dimen/game_button_size"
        android:layout_height="@dimen/game_button_size"
        android:layout_column="0"
        android:layout_row="2" />

    <Button
        android:id="@+id/button5"
        android:layout_width="@dimen/game_button_size"
        android:layout_height="@dimen/game_button_size"
        android:layout_column="1"
        android:layout_row="2" />

    <Button
        android:id="@+id/button6"
        android:layout_width="@dimen/game_button_size"
        android:layout_height="@dimen/game_button_size"
        android:layout_column="2"
        android:layout_row="2" />

    <Button
        android:id="@+id/button7"
        android:layout_width="@dimen/game_button_size"
        android:layout_height="@dimen/game_button_size"
        android:layout_column="0"
        android:layout_row="3" />

    <Button
        android:id="@+id/button8"
        android:layout_width="@dimen/game_button_size"
        android:layout_height="@dimen/game_button_size"
        android:layout_column="1"
        android:layout_row="3" />

    <Button
        android:id="@+id/button9"
        android:layout_width="@dimen/game_button_size"
        android:layout_height="@dimen/game_button_size"
        android:layout_column="2"
        android:layout_row="3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:layout_gravity="center"
        android:layout_row="4"
        android:textSize="@dimen/standart_size"
        android:text="@string/state" />

    <TextView
        android:id="@+id/player1_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_column="0"
        android:layout_row="5"
        android:text="XXX" />

    <TextView
        android:id="@+id/player1_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="center"
        android:layout_row="6"
        android:layout_marginTop="@dimen/standart_size"
        android:text="000"/>

    <TextView
        android:id="@+id/player2_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_column="2"
        android:layout_row="5"
        android:text="XXX" />

    <TextView
        android:id="@+id/player2_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:layout_gravity="center"
        android:layout_row="6"
        android:layout_marginTop="@dimen/standart_size"
        android:text="000"/>

    <Button
        android:id="@+id/reset_button"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_column="1"
        android:layout_row="7"
        android:layout_gravity="center"
        android:text="@string/reset_game"/>

</GridLayout>